--- a/featured-projects.html
+++ b/featured-projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,49 @@
   <link rel="stylesheet" href="featured-projects.css">
   <title>Featured-Projects-MockUp</title>
 </head>
+
 <body>
   <section class="project-container">
     <div class="wrap-collabsible">
-      <input id="collapsible" class="toggle" type="checkbox">
-      <label for="collapsible" class="lbl-toggle">Project 1</label>
+      <input id="collapsible-1" class="toggle" type="checkbox">
+      <label for="collapsible-1" class="lbl-toggle">Project 1</label>
       <div class="collapsible-content">
         <div class="content-inner">
           <p>
-            This project does a lot of cool stuff and is really cool. 
+            This project does a lot of cool stuff and is really cool.
             You should try it! It will be worth your time and it's fun
             to play around with. Please now try...
           </p>
         </div>
       </div>
     </div>
-</section>
+    <div class="wrap-collabsible">
+      <input id="collapsible-2" class="toggle" type="checkbox">
+      <label for="collapsible-2" class="lbl-toggle">Project 2</label>
+      <div class="collapsible-content">
+        <div class="content-inner">
+          <p>
+            This project does a lot of cool stuff and is really cool.
+            You should try it! It will be worth your time and it's fun
+            to play around with. Please now try...
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="wrap-collabsible">
+      <input id="collapsible-3" class="toggle" type="checkbox">
+      <label for="collapsible-3" class="lbl-toggle">Project 3</label>
+      <div class="collapsible-content">
+        <div class="content-inner">
+          <p>
+            This project does a lot of cool stuff and is really cool.
+            You should try it! It will be worth your time and it's fun
+            to play around with. Please now try...
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
