featured projects are animating constantly

--- a/featured-projects.html
+++ b/featured-projects.html
@@ -11,7 +11,7 @@
 
 <body>
   <section class="project-container">
-    <div class="wrap-collabsible">
+    <div class="wrap-collabsible one">
       <input id="collapsible-1" class="toggle" type="checkbox">
       <label for="collapsible-1" class="lbl-toggle">Project 1</label>
       <div class="collapsible-content">
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="wrap-collabsible">
+    <div class="wrap-collabsible two">
       <input id="collapsible-2" class="toggle" type="checkbox">
       <label for="collapsible-2" class="lbl-toggle">Project 2</label>
       <div class="collapsible-content">
@@ -37,7 +37,7 @@
         </div>
       </div>
     </div>
-    <div class="wrap-collabsible">
+    <div class="wrap-collabsible three">
       <input id="collapsible-3" class="toggle" type="checkbox">
       <label for="collapsible-3" class="lbl-toggle">Project 3</label>
       <div class="collapsible-content">
